出现乱码问题

--- a/Handbook/The Swift Programming Language/02.Language Guide/11.Methods.md
+++ b/Handbook/The Swift Programming Language/02.Language Guide/11.Methods.md
@@ -1,262 +1,1 @@
-#·½·¨
-·½·¨ÊÇÓÉÌØ¶¨ÀàĞÍ¹ØÁªÆğÀ´µÄº¯Êı¡£Àà¡¢½á¹¹ÌåºÍÃ¶¾Ù¶¼ÄÜ¶¨Òå³ÉÊµÀı·½·¨¡£Ëü·â×°ÁËÌØ¶¨µÄÈÎÎñºÍ¸ø¶¨ÀàĞÍµÄÊµÀıµÄ¹¦ÄÜº¯Êı¡£Àà£¬½á¹¹ÌåºÍ·½·¨Ò²ÄÜ¶¨ÒåÀàĞÍ·½·¨£¬ËüÖ»ÓëÀàĞÍµÄ±¾ÉíÓÉ¹ØÁª¡£ÀàĞÍ·½·¨ºÍObjective-CµÄÀà·½·¨ÀàËÆ¡£
-
-Êµ¼ÊÉÏ£¬SwiftÓëCºÍObjective-CµÄÖ÷ÒªÇø±ğ¾ÍÊÇ½á¹¹ÌåºÍÃ¶¾Ù¿ÉÒÔ¶¨Òå·½·¨¡£ÔÚObjective-CÖĞ£¬Ö»ÓĞÀà²ÅÄÜ¶¨Òå·½·¨¡£¶øÔÚSwiftÖĞ£¬Äã¿ÉÒÔÓĞÑ¡ÔñĞÔµÄÔÚÀà¡¢½á¹¹Ìå»òÃ¶¾ÙÖĞ¶¨Òå·½·¨£¬²¢ÇÒÊ¹µÃÔÚÄã´´½¨µÄÀàÖĞ¶¨Òå·½·¨Ê±¸ü¾ßÓĞÁé»îĞÔ¡£
-
-
-##ÊµÀı·½·¨
-
-ÊµÀı·½·¨ÊÇÊôÓÚÒ»¸öÌØ¶¨µÄÀà¡¢½á¹¹Ìå»òÃ¶¾ÙµÄÊµÀıµÄº¯Êı£¬º¯ÊıÊÇÊµÀıµÄÖ§Öù£¬Í¨¹ıÌá¹©·ÃÎÊÊµÀıÊôĞÔºÍĞŞ¸ÄÊµÀıÊôĞÔµÄ·½·¨£¬»ò¹ı¹ıÌá¹©Ïà¹ØÊµÀı¹¦ÄÜµÄÄ¿µÄ¡£ÊµÀı·½·¨ºÍº¯ÊıÓĞÏàÍ¬µÄÓï·¨£¬¾ÍÏñ¹¦ÄÜµÄÃèÊö¡£
-
-ÄãĞ´Ò»¸ö´øÓĞ¿ªºÍ±ÕµÄÊµÀı·½·¨×÷ÎªËüµÄËùÊôÀàĞÍ£¬Ò»¸öÊµÀı·½·¨¾ßÓĞÒşÊ½·ÃÎÊËùÓĞÆäËûµÄÊµÀı·½·¨ºÍÊôĞÔÀàĞÍ¡£Ò»¸öÊµÀı·½·¨Ö»ÄÜ±»ËüËùÊôµÄÀàµÄÌØ¶¨ÊµÀıµ÷ÓÃ¡£²»ÄÜÒòÎªÃ»ÓĞÏÖÓĞµÄÊµÀıºÍ°Ñ¹ÂÁ¢¡£
-
-ÕâÀï¶¨ÒåÁËÒ»¸ö¼òµ¥µÄCounterÀà£¬Ëü¿ÉÒÔÓÃÀ´¼ÆËãÒ»¸ö²Ù×÷·¢ÉúµÄ´ÎÊı:
-
-
-class Counter {
-    var count = 0
-    func increment() {
-       count++
-    }
-    func incrementBy(amount: Int) {
-        count += amount
-    }
-    func reset() {
-        count = 0
-    }
-}
-
-####CounterÀàÀï¶¨ÒåÁËÈı¸öÊµÀı·½·¨£º
-* increment  ¼ÆÊıÆ÷ÔöÁ¿¼Ó1
-
-* incrementBy(amount: Int)¼ÆÊıÆ÷ÓÉÌØ¶¨µÄÕûÊı×÷ÎªÔöÁ¿
-
-* reset ÖØÖÃ¼ÆÊıÆ÷µÄÖµÎª0
-
-¸ÃCounterÀàÒ²¶¨ÒåÁËÒ»¸öÊôĞÔ±äÁ¿count ,ÓÃÀ´Î¬³Öµ±Ç°¼ÆÊıÆ÷µÄÖµµÄ¹ìµÀ¡£
-Äãµ÷ÓÃÊµÀı·½·¨ºÍÊôĞÔÊ±µÄÓï·¨¾ßÓĞÏàÍ¬µã£º
-
-let counter = Counter()
-// the initial counter value is 0
-counter.increment()
-// the counter's value is now 1
-counter.incrementBy(5)
-// the counter's value is now 6
-counter.reset()
-// the counter's value is now 0
-
-
-##·½·¨µÄ¾Ö²¿ºÍÍâ²¿²ÎÊıÃû
-
-º¯ÊıµÄ²ÎÊı¿ÉÒÔÓµÓĞÒ»¸ö¾Ö²¿Ãû³Æ£¨ÔÚº¯ÊıÌåÄÚÊ¹ÓÃ£©ºÍÒ»¸öÍâ²¿Ãû³Æ£¨ÔÚµ÷ÓÃº¯ÊıÊ±Ê¹ÓÃ£©£¬×÷ÎªÍâ²¿²ÎÊıÃûµÄÃèÊö¡£·½·¨µÄ²ÎÊıÒ²ÊÇÈç´Ë£¬ÒòÎª·½·¨ÊÇÓëÀàĞÍÏà¹ØµÄº¯Êı¡£È»¶ø£¬¾Ö²¿Ãû³ÆºÍÍâ²¿Ãû³ÆµÄÄ¬ÈÏĞĞÎªÊÇ²»Í¬ÓÚº¯ÊıºÍ·½·¨µÄ¡£
-
-ÔÚSwiftÖĞ·½·¨Ïà¶ÔÓëObjective-CÖĞµÄ·½·¨·Ç³£ÏàËÆ£¬ÔÚObjective-CÖĞºÍÔÚSwiftÖĞµÄ·½·¨ÃûµÄµÚÒ»¸ö²ÎÊıÊ¹ÓÃ½é´Ê×÷Îª²Î¿¼£¬»ò¿ÉÒÔÍ¨¹ıÇ°ÃæµÄCounterÀàµÄÀı×ÓµÄincrementBy·½·¨¿ÉÒÔ¿´³öÀ´¡£Ê¹ÓÃÁËÒ»¸ö¿ÉÓÃµÄ½é´Ê±ãÓÚµ÷ÓÃÊ±¾ÍÏñÔÚÔÄ¶Á¾ä×ÓÒ»Ñù·½±ã¡£SwiftÊ¹ÓÃÕâÖÖÒÑÖÆ¶¨µÄÃüÃû·½·¨Ê¹µÃÔÚÊéĞ´Ê±¸ü¼òµ¥£¬µ÷ÓÃ·½·¨Ê±Ê¹ÓÃÄ¬ÈÏÍ¾¾¶±ÈÊ¹ÓÃº¯Êı²ÎÊı¸ü¼ò½à¡£
-
-¾ßÌåÀ´Ëµ£¬SwiftÔÚ·½·¨ÖĞÄ¬ÈÏµÄ½«µÚÒ»¸ö²ÎÊıÃû×÷Îª·½·¨µÄ¾Ö²¿²ÎÊıÃû£¬Ò²Ä¬ÈÏµÄ¸ù¾İ¾Ö²¿²ÎÊıºÍÍâ²¿²ÎÊıÃûÈ¥¸øµÚ¶ş¸öºÍºóĞøµÄ²ÎÊıÃüÃû¡£ÔÚÄãÊéĞ´Objective-c·½·¨Ê±ºÜÊìÏ¤ÕâÖÖµäĞÍµÄÃüÃû¹«Ô¼ºÍµ÷ÓÃÔ¼¶¨£¬²¢Ê¹²ÎÊıÃû³Æ¸ü·ûºÏÄãµÄµ÷ÓÃ·½·¨µÄ±í´ï¡£
-
-Ï¸ÏëÏÂÕâ¸öÌæ´ú°æ±¾µÄCounterÀà£¬Ëü¶¨ÒåÁËÒ»¸ö¸ü¸´ÔÓµÄincrementBy·½·¨£º
-
-class Counter {
-    var count: Int = 0
-    func incrementBy(amount: Int, numberOfTimes: Int) {
-        count += amount * numberOfTimes
-    }
-}
-
-Õâ¸öincrementBy·½·¨ÓĞÁ½¸ö²ÎÊı£­amount ºÍ numberOfTimes.Ä¬ÈÏÇé¿öÏÂ£¬Swift½«amountÊÓÎªÎ¨Ò»µÄ¾Ö²¿Ãû³Æ£¬µ«½«numberOfTimesÍ¬Ê±ÊÓÎª¾Ö²¿Ãû³ÆºÍÍâ²¿Ãû³Æ¡£µ÷ÓÃ·½·¨ÈçÏÂ£º
-
-let counter = Counter()
-counter.incrementBy(5, numberOfTimes: 3)
-// counter value is now 15
-
-Äã²»ĞèÒªÎªµÚÒ»¸ö²ÎÊıµÄÖµ¶øÈ¥¶¨ÒåÒ»¸öÍâ²¿²ÎÊıÃû£¬ÒòÎªËûµÄÄ¿µÄÊÇÃ÷È·incrementByº¯ÊıµÄÃû³Æ¡£¶øµÚ¶ş¸ö²ÎÊıÃûÔòÊÇÓÉÍâ²¿²ÎÊıÃû³Æ½øĞĞÏŞ¶¨£¬Ê¹·½·¨±»µ÷ÓÃÊ±µÄÄ¿µÄ¸üÎªÃ÷È·¡£
-
-Èç¹ûÄãÔÚnumberOfTimes²ÎÊıÇ°Ğ´ÁËÒ»¸öÉ¢ÁĞ·ûºÅ£¨£££©£¬ÕâÖÖĞĞÎªÔòÊÇÓĞĞ§µÄÄ¬ÈÏ´¦Àí·½·¨£º
-
-func incrementBy(amount: Int, #numberOfTimes: Int) {
-    count += amount * numberOfTimes
-}
-
-ÉÏÃæÃèÊöµÄÄ¬ÈÏĞĞÎªÊÇÖ¸£¬ÔÚSwiftÖĞ¶¨Òå·½·¨Ê±Ê¹ÓÃºÍObjective-cÏàÍ¬Óï·¨·ç¸ñÊéĞ´£¬±»³ÆÖ®Îª×ÔÈ»µÄ±í´ï·½Ê½¡£
-
-##·½·¨µÄÍâ²¿²ÎÊıÃû³ÆĞŞÊÎĞĞÎª
-
-ÓĞÊ±Îª·½·¨µÄµÚÒ»¸ö²ÎÊıÌá¹©Ò»¸öÍâ²¿²ÎÊıÃûÊÇ·Ç³£ÓĞÓÃµÄ¡£¾¡¹ÜÕâ²»ÊÇÄ¬ÈÏµÄĞĞÎª¡£Äã¿ÉÒÔÌí¼ÓÒ»¸öÄã×Ô¼ºÃ÷È·µÄÍâ²¿Ãû³Æ£¬»òÕßÄãÒ²¿ÉÒÔÊ¹ÓÃ¾Ö²¿Ãû³Æ×÷ÎªÍâ²¿Ãû³Æ²¢ÔÚ²ÎÊıÃûÇ°¼ÓÒ»¸öÉ¢ÁĞ·ûºÅ×÷Îª²ÎÊıÃûµÄÇ°×º¡£
-
-Ïà·´µÄ£¬Èç¹ûÄã²»ÏëÎªÒ»¸ö·½·¨µÄµÚ¶ş¸ö²ÎÊı»òºóĞø²ÎÊıÌá¹©Íâ²¿²ÎÊıÃû£¬¿ÉÍ¨¹ıÊ¹ÓÃÏÂ»®Ïß·ûºÅ£¨_£©×÷Îª¸Ã²ÎÊıµÄÏÔÊ½Íâ²¿²ÎÊıÃû³ÆÀ´¸²¸ÇÄ¬ÈÏĞĞÎª¡£
-
-##self ÊôĞÔ
-
-Ã¿Ò»¸öÀàĞÍµÄÊµÀı¶¼ÓĞÒ»¸ö³ÆÎª self µÄÒşÊ½ÊôĞÔ£¬ËüÊÇÍêÈ«µÈÍ¬ÓÚ¸ÃÊµÌå±¾ÉíµÄ¡£Äã¿ÉÒÔÊ¹ÓÃÕâ¸öÒşÊ½µÄselfÊôĞÔÒûÓÃµ±Ç°ÊµÀıµÄÊµÀı·½·¨¡£
-
-ÔÚÉÏÃæµÄÀı×ÓÖĞ£¬increment·½·¨Ò²¿ÉÒÔĞ´³ÉÕâÑù£º
-
-func increment() {
-    self.count++
-}
-
-ÔÚÊµ¼ùÖĞ£¬Äã²»ĞèÒªºÜ¾­³£µÄÔÚ´úÂëÖĞÊéĞ´self£¬µ±ÄãÊ¹ÓÃÁËÒ»¸öÒÑÖªµÄÊôĞÔ»ò·½·¨ÃûµÄ·½·¨Ê±£¬Èç¹ûÄãÃ»ÓÃÃ÷È·Ğ´self£¬Swift»á¼ÙÉèÄãÊÇÖ¸µ±Ç°ÊµÀıµÄÊôĞÔ»ò·½·¨¡£CounterÀàÀïµÄÈı¸öÊ¹ÓÃÁËcount£¨¶ø²»ÊÇself.count£©ÊµÀı·½·¨¾ÍÖ¤Ã÷ÁËÕâ¸ö¼ÙÉè¡£
-
-Ö÷ÒªµÄÒì³£·¢ÉúÔÚÒ»¸öÊµÀı·½·¨µÄ²ÎÊıÃûºÍÊµÀıµÄÊôĞÔÃûÏàÍ¬¡£ÔÚÕâÖÖÇé¿öÏÂ£¬²ÎÊıÃûÓÅÏÈ£¬ÓĞ±ØÒª²Î¿¼ÊôĞÔ¸ü¶àµÄºÏ¸ñ·½Ê½¡£Äã¿ÉÒÔÊ¹ÓÃÒşÊ½µÄselfÊôĞÔÇø·Ö²ÎÊıÃûºÍÊôĞÔÃû¡£
-
-ÔÚÕâÀï£¬Ê¹ÓÃÁËselfÀ´Çø·ÖÃû³ÆÍ¬ÎªxµÄ·½·¨²ÎÊıºÍÒ»¸öÊµÀıÊôĞÔ:
-
-struct Point {
-    var x = 0.0, y = 0.0
-    func isToTheRightOfX(x: Double) -> Bool {
-        return self.x > x
-    }
-}
-let somePoint = Point(x: 4.0, y: 5.0)
-if somePoint.isToTheRightOfX(1.0) {
-    println("This point is to the right of the line where x == 1.0")
-}
-// prints "This point is to the right of the line where x == 1.0"
-
-Ã»ÓĞselfµÄÇ°×º£¬Swift½«¼ÙÉèËüÃÇÊ¹ÓÃµÄ x ¶¼ÊÇ·½·¨µÄ²ÎÊıx.
-
-##ĞŞ¸ÄÖµÀàĞÍµÄÊµÀı·½·¨
-
-½á¹¹ÌåºÍÃ¶¾Ù¶¼ÊÇÖµÀàĞÍ¡£Ä¬ÈÏÇé¿öÏÂ£¬ÖµÀàĞÍµÄÊôĞÔ²»ÄÜ´ÓËüµÄÄÚ²¿ÊµÀı·½·¨ĞŞ¸Ä¡£
-
-È»¶ø£¬Èç¹ûÄãĞèÒªĞŞ¸ÄÄãµÄ½á¹¹Ìå»òÃ¶¾ÙµÄÊôĞÔÔÚÒ»¸öÌØ¶¨µÄ·½·¨ÖĞ£¬Äã¿ÉÒÔÔÚÕâ¸ö·½·¨ÖĞÑ¡Ôñ¼ÓÈë±äÒìĞĞÎª¡£È»ºó¸Ã·½·¨¿ÉÒÔ±äÒì£¨¼´¸Ä±ä£©ËüµÄÊôĞÔ£¬ÈÎºÎµÄ¸ü¸ÄÔÚ·½·¨½áÊøÊ±Ğ´»ØÔ­À´µÄ½á¹¹Àï¡£¸Ã·½·¨»¹¿ÉÒÔ·ÖÅäÒ»¸öĞÂµÄÊµÀıµ½ÆäÒşº¬µÄselfÊôĞÔ£¬¶øÕâ¸öĞÂµÄÊµÀı½«È¡´úÏÖÓĞµÄÊµÀı£¬µ±¸Ã·½·¨½áÊøÊ±¡£
-
-Äã¿ÉÒÔ¼ÓÈëÕâ¸öĞĞÎª£¬Í¨¹ı½«mutating¹Ø¼ü×ÖĞ´ÔÚ·½·¨µÄfunc¹Ø¼ü×ÖÇ°£º
-struct Point {
-    var x = 0.0, y = 0.0
-    mutating func moveByX(deltaX: Double, y deltaY: Double) {
-        x += deltaX
-        y += deltaY
-    }
-}
-
-var somePoint = Point(x: 1.0, y: 1.0)
-somePoint.moveByX(2.0, y: 3.0)
-println("The point is now at (\(somePoint.x), \(somePoint.y))")
-// prints "The point is now at (3.0, 4.0)"
-
-ÉÏÃæµÄPoint½á¹¹Ìå¶¨ÒåÁËÒ»¸ö±äÒìµÄmoveByX·½·¨£¬ËüÍ¨¹ıÒ»¶¨Á¿ÒÆ¶¯Ò»¸öPointÊµÀı¡£¶ø²»ÊÇ·µ»ØÒ»¸öĞÂµÄµã£¬Õâ¸ö·½·¨Êµ¼ÊÉÏĞŞ¸ÄÁËÔÚÆäÉÏµ÷ÓÃµÄµã¡£mutating¹Ø¼ü×ÖÌí¼Óµ½·½·¨µÄ¶¨ÒåÉÏ£¬Ê¹ËüÄÜ¹»ĞŞ¸ÄËüµÄÊôĞÔ¡£
-
-Çë×¢Òâ£¬Äã²»ÄÜÊ¹ÓÃÒ»¸ö³£Á¿µÄ½á¹¹ÀàĞÍÈ¥µ÷ÓÃ±äÒì·½·¨£¬ÒòÎªËüµÄÊôĞÔ²»ÄÜ±»¸Ä±ä¡£¼´Ê¹ËüÃÇÊ¹¿É±äµÄÊôĞÔ£¬Èç³£Á¿½á¹¹ÌåÊµÀıµÄ´æ´¢ÊôĞÔµÄÃèÊö£º
-
-let fixedPoint = Point(x: 3.0, y: 3.0)
-fixedPoint.moveByX(2.0, y: 3.0)
-// this will report an error
-
-##ÓÉ±äÒì·½·¨·ÖÅäself
-
-±äÒì·½·¨¿ÉÒÔ·ÖÅäÒ»¸öÈ«ĞÂµÄÊµÀı¸øÒşÊ½µÄselfÊôĞÔ¡£ÉÏÃæËùÊ¾µÄPointÀı×ÓÒ²¿ÉÒÔÓÂÏÂÃæµÄ·½Ê½À´Ìæ´ú£º
-
-struct Point {
-    var x = 0.0, y = 0.0
-    mutating func moveByX(deltaX: Double, y deltaY: Double) {
-        self = Point(x: x + deltaX, y: y + deltaY)
-    }
-}
-
-moveByX·½·¨µÄmutating °æ±¾´´½¨ÁËÒ»¸öÈ«ĞÂµÄ½á¹¹Ìå£¬²¢½«xºÍyµÄÖµÉèÖÃµ½Ä¿±êÎ»ÖÃ¡£µ÷ÓÃÕâ¸ö°æ±¾µÄ·½·¨µÄ×îÖÕ·µ»Ø½á¹ûºÍµ÷ÓÃÖ®Ç°°æ±¾µÄ½á¹ûÍêÈ«Ò»Ñù¡£
-
-Ã¶¾ÙµÄ±äÒì·½·¨¿ÉÒÔÔÚÍ¬Ò»¸öÃ¶¾ÙÀïÎªÒşÊ½µÄselfÉèÖÃ²»Í¬µÄÖµ£º
-
-enum TriStateSwitch {
-    case Off, Low, High
-    mutating func next() {
-        switch self {
-        case Off:
-            self = Low
-        case Low:
-            self = High
-        case High:
-            self = Off
-        }
-    }
-}
-var ovenLight = TriStateSwitch.Low
-ovenLight.next()
-// ovenLight is now equal to .High
-ovenLight.next()
-// ovenLight is now equal to .Off
-
-Õâ¸öÀı×Ó¶¨ÒåÁËÒ»¸ö¾ßÓĞÈıÖÖ×´Ì¬¹©Ñ¡ÔñµÄÃ¶¾Ù¡£Ã¿Ò»´ÎËüµÄnext·½·¨±»µ÷ÓÃ£¬ ÈıÖÖ²»Í¬µÄµçÔ´×´Ì¬£¨Off,LowºÍHigh£©Ö®¼äÑ­»·Ñ¡Ôñ¡£
-
-##ÀàĞÍ·½·¨
-
-ÈçÉÏËùÊö£¬ÊµÀı·½·¨ÊÇÓÉÒ»¸öÌØ¶¨ÀàĞÍµÄÊµÀıµ÷ÓÃµÄ·½·¨¡£Äã»¹¿ÉÒÔ¶¨ÒåÓÉÀàĞÍ×ÔÉíµ÷ÓÃµÄ·½·¨¡£ÕâÖÖ·½·¨±»³ÆÎªÀàĞÍ·½·¨¡£Äã¿ÉÒÔÍ¨¹ıÔÚfunc ¹Ø¼ü×ÖÇ°Ğ´ÉÏclass ¹Ø¼ü×ÖÀ´ÉùÃ÷ÀàµÄÀàĞÍ·½·¨£¬¶øÔÚ½á¹¹Ìå»òÃ¶¾ÙÄÚ¶¨ÒåÀàĞÍ·½·¨ÔòĞèÔÚfunc¹Ø¼ü×ÖÇ°ÊéĞ´static ¹Ø¼ü×ÖÀ´ÉùÃ÷¡£
-
->#####NOTE
-ÔÚObjective-CÖĞ£¬ÄãÖ»ÄÜÎªObjective-CÀà¶¨ÒåÀàĞÍ¼¶·½·¨¡£ÔÚSwiftÖĞ£¬Äã¿ÉÒÔÎªÀà¡¢½á¹¹ÌåºÍÃ¶¾Ù¶¨ÒåÀàĞÍ¼¶·½·¨¡£Ã¿ÖÖÀàĞÍ·½·¨ÓÉËüµÄÀàĞÍÀ´Ã÷È··¶Î§µÄ¡£
-
-ÀàĞÍ·½·¨µÄµ÷ÓÃÓï·¨ºÍÊµÀı·½·¨µÄµ÷ÓÃ·½·¨ºÜÏñ¡£µ«ÊÇ£¬ÄãÖ»ÄÜÍ¨¹ıÀàÀ´µ÷ÓÃÀàĞÍ·½·¨£¬¶ø²»ÊÇÍ¨¹ıÕâ¸öÀàµÄÊµÀıÀ´µ÷ÓÃ¡£Õâ¶ùÓĞÒ»¸ö½Ğ×öSomeClassµÄÀàÎªÄúÕ¹Ê¾ÁËÈçºÎµ÷ÓÃÒ»¸öÀàĞÍ·½·¨£º
-
-class SomeClass {
-    class func someTypeMethod() {
-        // type method implementation goes here
-    }
-}
-SomeClass.someTypeMethod()
-
-ÔÚÀàĞÍ·½·¨ÌåÄÚ£¬ÒşÊ½µÄselfÊôĞÔÒıÓÃÀàĞÍ±¾Éí£¬¶ø²»ÊÇ¸ÃÀàĞÍµÄÒ»¸öÊµÀı¡£¶ÔÓÚ ½á¹¹ÌåºÍÃ¶¾Ù£¬ÕâÒâÎ¶×ÅÄã¿ÉÒÔÊ¹ÓÃselfÀ´Ïû³ı¾²Ì¬Äã²Ù×÷¾²Ì¬ÊôĞÔ¡¢¾²Ì¬·½·¨²ÎÊıºÍÊµÀıÊôĞÔºÍÊµÀı·½·¨²ÎÊıµÄÆçÒå¡£
-
-¸üÎªÆÕ±éµÄÊÇ£¬ÄãÔÚÒ»¸öÀàĞÍ·½·¨ÌåÄÚÊ¹ÓÃÈÎºÎ²»ºÏ¸ñµÄ·½·¨ºÍÊôĞÔÃû³ÆËü¶¼½«ÒıÓÃÆäËüÀàĞÍ¼¶µÄ·½·¨ºÍÊôĞÔ¡£Ò»¸öÀàĞÍ·½·¨¿ÉÒÔÍ¨¹ıÆäËüµÄ·½·¨ÃûÀ´µ÷ÓÃÁíÒ»¸öÀàĞÍ·½·¨£¬¶ø²»ĞèÒªÎªÀàĞÍÃû¼ÓÇ°×º¡£Í¬Ñù£¬½á¹¹ÌåºÍÃ¶¾ÙµÄÀàĞÍ·½·¨Ò²ÄÜÍ¨¹ıÊ¹ÓÃ¾²Ì¬ÊôĞÔÃû·ÃÎÊ¾²Ì¬ÊôĞÔ£¬¶ø²»ĞèÒªÀàĞÍÃû×öÇ°×º¡£
-
-ÏÂÃæµÄÀı×Ó¶¨ÒåÁËÒ»¸öÃûÎªLevelTracker½á¹¹Ìå£¬ËüÍ¨¹ıÓÎÏ·µÄ²»Í¬¼¶±ğ»ò½×¶Î¸ú×ÙÍæ¼ÒµÄ½ø²½¡£ÕâÊÇÒ»¸öµ¥ÈËÓÎÏ·£¬µ«¿ÉÒÔÔÚÒ»¸öÉè±¸ÉÏÎª¶à¸öÍæ¼Ò´æ´¢ĞÅÏ¢¡£µ±ÓÎÏ·µÚÒ»´ÎÍæÊ±ËùÓĞµÄ¼¶±ğ¶¼±»ÉÏËø£¨³ıÁËµÚÒ»¼¶£©¡£Ã¿µ±Ò»¸öÍæ¼ÒÍê³ÉÒ»¸ö¼¶±ğ£¬¸Ã¼¶±ğ½«¶ÔÉè±¸ÉÏµÄËùÓĞÍæ¼Ò½âËø¡£¸ÃLevelTracker½á¹¹Ìå²ÉÓÃ¾²Ì¬ÊôĞÔºÍ·½·¨À´¸ú×ÙÓÎÏ·µÄÄÇĞ©¼¶±ğ±»½âËø¡£Ëü»¹¸ú×Ùµ±Ç°¼¶±ğµÄ¸ö±ğÍæ¼ÒË®Æ½¡£
-
-struct LevelTracker {
-    static var highestUnlockedLevel = 1
-    static func unlockLevel(level: Int) {
-        if level > highestUnlockedLevel { highestUnlockedLevel = level }
-    }
-    static func levelIsUnlocked(level: Int) -> Bool {
-        return level <= highestUnlockedLevel
-    }
-    var currentLevel = 1
-    mutating func advanceToLevel(level: Int) -> Bool {
-        if LevelTracker.levelIsUnlocked(level) {
-            currentLevel = level
-            return true
-        } else {
-            return false
-        }
-    }
-}
-
-¸ÃLevelTracker½á¹¹Ìå¸úÖĞÈÎºÎÍæ¼ÒËù½âËøµÄ×î¸ßµÄ¼¶±ğ¡£Õâ¸öÖµ±»´æ´¢ÔÚÒ»¸öÃûÎªhighestUnlockedLevelµÄ¾²Ì¬ÊôĞÔÀï¡£
-
-LevelTracker»¹¶¨ÒåÁËÁ½¸öÀàĞÍº¯ÊıÎªhighestUnlockedLevels¹¤×÷¡£Ê×ÏÈÊ±Ò»¸ö½ĞunlockLevelµÄº¯Êı£¬¸ºÔğµ±Ò»¸öĞÂµÄ¼¶±ğ±»½âËøÊ±È¥¸üĞÂhighestUnlockedLevelµÄÖµ¡£µÚ¶ş¸öÊÇÒ»¸ö±ãÀûµÄlevelIsUnlockedÀàĞÍº¯Êı,µ±Ò»¸öÌØ¶¨µÄ¼¶±ğ±»½âËø£¬Ëü·µ»Øtrue¡££¨×¢Òâ£¬ÕâĞ©ÀàĞÍ·½·¨¿ÉÒÔ·ÃÎÊhighestUnlockedLevel¾²Ì¬ÊôĞÔ£¬Äã²»ĞèÒª°ÑËüĞ´³ÉLevelTracker.highestUnlockedLevel£©
-
-³ıÁË¾²Ì¬ÊôĞÔºÍÀàĞÍ·½·¨£¬LevelTrackerÓÎÏ·Í¨¹ıÒ»¸öcurrentLevelÊµÀıÊôĞÔÀ´×·×ÙÃ¿¸öµ¥¸öÍæ¼Òµ±Ç°ÕıÔÚÍæµÄÓÎÏ·¼¶±ğ¡£
-
-ÎªÁË°ïÖú¹ÜÀícurrentLevelÊôĞÔ£¬LevelTracker¶¨ÒåÁËÒ»¸öÃûÎªadvanceToLevelµÄÊµÀı·½·¨¡£ÔÚ¸üĞÂcurrentLevelÖ®Ç°£¬¸Ã·½·¨»á¼ì²éĞÂµÄÓÎÏ·¼¶±ğÊÇ·ñÒÑ¾­½âËø¡£advanceToLevel·½·¨Í¨¹ı·µ»ØÒ»¸öboolÖµÀ´Ö¸Ê¾ÊÇ·ñÄÜ¹»ÉèÖÃcurrentLevel¡£
-
-LevelTracker½á¹¹Ìå±»Ò»¸öPlayerÀàËùÊ¹ÓÃ£¬ÈçÏÂËùÊ¾£¬×·×ÙºÍ¸üĞÂµ¥¸öÍæ¼ÒµÄ½ø¶È£º
-
-class Player {
-    var tracker = LevelTracker()
-    let playerName: String
-    func completedLevel(level: Int) {
-        LevelTracker.unlockLevel(level + 1)
-        tracker.advanceToLevel(level + 1)
-    }
-    init(name: String) {
-        playerName = name
-    }
-}
-
-PlayerÀà´´½¨ÁËÒ»¸öLevelTrackerµÄĞÂÊµÀıÓÃÀ´¸ú×ÙÍæ¼ÒµÄ½ø¶È¡£ËüÒ²Ìá¹©ÁËÒ»¸öÃûÎªcompletedLevel·½·¨£¬Ã¿µ±Íæ¼ÒÍê³ÉÒ»¸öÌØ¶¨µÄ¼¶±ğÊ±±»µ÷ÓÃ¡£Õâ¸ö·½·¨»áÎªËùÓĞÍæ¼Ò½âËøÒ»¸öĞÂµÄµÈ¼¶ºÍ¸üĞÂÍæ¼ÒµÄ½ø¶È£¬²¢½«ËüÃÇ´øÈëµ½Ò»¸öĞÂµÄ¼¶±ğÀï¡££¨advanceToLevel·µ»ØµÄboolÖµ½«±»ºöÂÔ£¬ÒòÎªÔÚÉÏÒ»ĞĞLevelTracker.unlockLevel±»µ÷ÓÃÊ±£¬¸ÃµÈ¼¶µÄ±»½âËøÒÑ¾­ÊÇÒÑÖªµÄÁË£©
-
-Äã¿ÉÒÔÍ¨¹ıPlayerÀà´´½¨Ò»¸öĞÂµÄÍæ¼ÒÊµÀı£¬¿´¿´µ±Íæ¼ÒÍê³ÉÒ»¸ö¼¶±ğ»á·¢ÉúÊ²Ã´£º
-
-var player = Player(name: "Argyrios")
-player.completedLevel(1)
-println("highest unlocked level is now \(LevelTracker.highestUnlockedLevel)")
-// prints "highest unlocked level is now 2"
-
-Èç¹ûÄã´´½¨ÁËµÚ¶ş¸öÍæ¼Ò£¬ÈôÄãÏë½øÈëµ½Ò»¸öÈÎºÎÒ»¸öÍæ¼Ò¶¼Ã»ÄÜ½âËøµÄÓÎÏ·µÈ¼¶ÖĞ£¬ÊÔÍ¼ÉèÖÃÍæ¼ÒµÄµ±Ç°µÈ¼¶Ê§°Ü£º
-
-player = Player(name: "Beto")
-if player.tracker.advanceToLevel(6) {
-    println("player is now on level 6")
-} else {
-    println("level 6 has not yet been unlocked")
-}
-// prints "level 6 has not yet been unlocked"
+ä¹±ç ï¼Œä¿®æ”¹åæ›´æ–°ï¼
