--- a/Handbook/The Swift Programming Language/02.Language Guide/05.Control Flow.md
+++ b/Handbook/The Swift Programming Language/02.Language Guide/05.Control Flow.md
@@ -8,7 +8,7 @@ Swift提供了所有c类语言的控制流结构。包括for和while循环来执
 Swift的switch语句也比C语言的要强大很多。 Swift中switch语句的case语句不会“掉入”下一个case，避免了c语言忘记写break语句产生的错误。 case可以匹配许多不同的模式，包括范围匹配，元组匹配或者抛给指定的类型。匹配值在一个case条件下可以绑定到临时常量或变量，可以在case的代码块中使用，复杂匹配条件下可以表示为每一个case的条件
 
  
-## For Loops
+## For Loops - For循环
 for循环用来多次执行一组语句 ，Swift提供了两种形式：
 
 * for-in执行范围，序列，集合或级数等每一项中的一组语句
